--- a/docs/neurips_2024.sty
+++ b/docs/neurips_2024.sty
@@ -327,7 +327,8 @@
 % handle tweaks for camera-ready copy vs. submission copy
 \if@preprint
   \newcommand{\@noticestring}{%
-    Preprint. Under review.%
+    Not in the \@neuripsordinal\/ Conference on Neural Information Processing Systems
+      (NeurIPS \@neuripsyear)%
   }
 \else
   \if@neuripsfinal
