Fixed description of bitflipping models, and updated readme

--- a/bitflipping_dqn_target_her_implementation.ipynb
+++ b/bitflipping_dqn_target_her_implementation.ipynb
@@ -14,7 +14,7 @@
     " * Output: $\\mathbb{R}^{n}$ vector of the $Q$-values\n",
     "    * The index corresponds to integer $\\geq 0$ representing the index of the bit being flipped\n",
     "    * So $\\text{model}(s,t)[a]$ will be the $Q$-value\n",
-    " * Architecture: Simple MLP\n",
+    " * Architecture: UFVA, Handcrafted Neural Network with high inductive bias\n",
     "\n",
     "## Training method\n",
     "Simple DQN with replay\n",
